goldilocks/components/goldilocks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    argocd.argoproj.io/sync-wave: '1'
  name: goldilocks
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: goldilocks.<DOMAIN_NAME>
      http:
        paths:
          - backend:
              service:
                name: <CLUSTER_NAME>-goldilocks
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - goldilocks.<DOMAIN_NAME>
      secretName: goldilocks-tls
